Set canvas width and height

--- a/Index.html
+++ b/Index.html
@@ -6,12 +6,12 @@
 			</title>
 			<link rel="stylesheet" href="style.css">
 			<script src="lib/ocanvas-2.8.3.min.js"></script>
-			<script src="huyna.js"></script> 
+			<script src="huyna.js"></script>
 		</head>
 		<body oncontextmenu="return false">
-			<!-- <audio autoplay="autoplay">
+			<audio autoplay="autoplay">
 				<source src="music.ogg" type="audio/ogg"></source>
-			</audio> -->
+			</audio>
 			<canvas id="star-canvas">
 			</canvas>
 			<nav class="context-menu" id="context-menu">
