--- a/Index.html
+++ b/Index.html
@@ -17,22 +17,22 @@
 			<nav class="context-menu" id="context-menu">
 			  <ul class="context-menu__items">
 			    <li class="context-menu__item">
-			      <a href="#" class="context-menu__link">
-			        <i class="fa fa-eye"></i> View Task
+			      <a href="#" class="context-menu__link" id="inputBox">
+			        <i class="fafa-eye"></i> View Task
 			      </a>
 			    </li>
 			    <li class="context-menu__item">
 			      <a href="#" class="context-menu__link">
-			        <i class="fa fa-edit"></i> Edit Task
+			        <i class="fafa-edit"></i> Edit Task
 			      </a>
 			    </li>
 			    <li class="context-menu__item">
-			      <a href="#" class="context-menu__link">
-			        <i class="fa fa-times"></i> Delete Task
+			      <a href="#" class="context-menu__link" >
+			        <i class="fafa-times"></i> Delete Task
 			      </a>
 			    </li>
 			  </ul>
 			</nav>
-
+			<input type="text" class="dotInfo" id="dotInfo">
 		</body>
 	</html>
